DRILL-5544: Fix issues reported by findbugs in Async Parquet Reader.